Fix padding for links inside the floating menu to align them correctly.

--- a/app/assets/stylesheets/reimagine2/devpost/_global_nav_bar.sass
+++ b/app/assets/stylesheets/reimagine2/devpost/_global_nav_bar.sass
@@ -397,7 +397,7 @@
       display: flex
       flex-direction: column
       padding-top: 10px
-      padding-left: 52px
+      padding-left: 53px
 
       a
         padding: 6px 6px
